<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Labels -->
    <string name="app_name">Agenda Caelum</string>
    <string name="formulario">Formulário</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="endereco">Endereço:</string>
    <string name="site">Site:</string>
    <string name="inserir">Inserir</string>
    <string name="fotoContato">Contato</string>
    <string name="listaAlunos">Lista Alunos</string>
    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="maisOpcoes">Mais Opções</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="baixarProvas">Baixar Provas</string>
    <string name="preferencias">Preferências</string>
    <string name="ligar">Ligar</string>
    <string name="enviarSMS">Enviar SMS</string>
    <string name="acharMapa">Achar no Mapa</string>
    <string name="navegarSite">Navegar no Site</string>
    <string name="deletar">Deletar</string>
    <string name="enviarEmail">Enviar E-mail</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="editar">Editar</string>
    <string name="email">E-mail</string>
    
    <!-- Mensagens -->
    <string name="msgSalvoComSucesso">Aluno salvo com sucesso!</string>
    <string name="desejaDeletar">Deseja mesmo deletar?</string>
    <string name="msgDeletadoComSucesso">Aluno deletado com sucesso!</string>
    <string name="msgAlteradoComSucesso">Aluno alterado com sucesso!</string>
    <string name="msgSemTelefone">Aluno sem telefone cadastrado</string>
    <string name="msgSemEndereco">Aluno sem endereço cadastrado</string>
    <string name="msgSemSite">Aluno sem site cadastrado</string>
    <string name="msgSemEmail">Aluno sem e-mail cadastrado</string>
    <string name="msgAlunosEnviadosComSucesso">Os alunos foram enviados com sucesso</string>
    <string name="msgErroNoEnvioDeAlunos">Houve um erro no envio de alunos, tente mais tarde</string>
    <string name="msgEnviandoAlunos">Enviando alunos</string>
    <string name="msgEnvioPelaWeb">Envio de dados para web</string>

</resources>